src/rules/snapshots/pg_migration_lint__rules__pgm007__tests__timestamp_to_timestamptz_fires_info.snap
---
source: src/rules/pgm007.rs
expression: findings
---
- rule_id: PGM007
  severity: Info
  message: "Changing column type on existing table 'events' ('created_at': timestamp → timestamptz) rewrites the entire table under an ACCESS EXCLUSIVE lock. For large tables, this causes extended downtime. Consider creating a new column, backfilling, and swapping instead."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
